# smart-mobility-final-project

./: README.md  Trained_YOLOv7_Box.ipynb  google drive link for object detection part.txt  landmark_monitor_client.py  landmark_monitor_server.py  package.xml  publisher.txt  subscriber.txt
