<?xml version="1.0"?>
<package format="2">
  <name>Vegetable picker</name>
  <version>0.0.0</version>
  <description>Turtlebot project</description>

  <maintainer email="ozodjonkunishev@gmail.com">jons</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <export>
   

  </export>
</package>
